@startuml

class Main {
    + public static void main(String[] args)
    + public static int countLampsInBuilding(Building building)
    + public static boolean isNormal(Building building)
}

class Buildings {
    - final ArrayList<Room> rooms
    - int numberOfBathrooms
    - int numberOfFloors
    - boolean isOfficeBuilding

    + public Buildings(ArrayList<Room> rooms, int numberOfBathrooms, int numberOfFloors, boolean isOfficeBuilding)
    + public boolean isOfficeBuilding()
    + public int getNumberOfBathrooms()
    + public int getNumberOfFloors()
    + public ArrayList<Room> getRooms()
}

class Room {
    - int numberOfDoors
    - int numberOfLamps
    - int numberOfWindows

    + Room(int numberOfDoors, int numberOfLamps, int numberOfWindows)
    + int getNumberOfDoors()
    + int getNumberOfLamps()
    + int getNumberOfWindows()
}

Main *-- Buildings
Buildings *-- Room

@enduml